# api

./: Cargo.toml  flake.nix
.cargo/: config.toml
src/: main.rs  server.rs
src/endpoints/health/: route.rs
