[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-folder-router = "0.3.9"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.dev]
panic = "abort"

[profile.release]
# inherits = "dev"
panic = "abort"
opt-level = 3
debug = false
lto = true
codegen-units = 1
incremental = true
split-debuginfo = "packed"
# strip = "symbols"
strip = true
